--- a/presentations/samconn2017-lightning/index.html
+++ b/presentations/samconn2017-lightning/index.html
@@ -46,7 +46,8 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Metadata Management and Reuse: What Your Metadataists Do</h1>
+					<h1>Metadata Management and Reuse:</h1>
+					<h1>What Your Metadataists Do</h1>
 					<h2>Ruth Kitchin Tillman</h2>
 					<h3>Penn State University</h3>
 					<p>
@@ -57,6 +58,14 @@
 				<section>
 					<h1>Lightning Talks:</h1>
 					<h2>No Substitute for Talking to Your Folks</h2>
+				</section>
+
+				<section>
+					<h1>Context</h1>
+					<ul>
+					<li>Notre Dame's JSON-LD Export for ETL</li>
+					<li>Huda Khan's DLF talk on BIBFRAME tool design</li>
+					</ul>
 				</section>
 
 				<section>
