Basic presentation draft

--- a/presentations/samconn2017-lightning/index.html
+++ b/presentations/samconn2017-lightning/index.html
@@ -70,7 +70,42 @@
 
 				<section>
 					<h1>Whirlwind Tour</h1>
-					<h2></h2>
+				</section>
+
+				<section>
+					<h1>What Do We Want?</h1>
+					<h2>To Get Metadata Out...</h2>
+					<p>...and put it back in again!</p>
+				</section>
+
+				<section>
+					<h1>Sample Tasks</h1>
+					<ul>
+						<li>Remediation: export, improve, reingest!</li>
+						<!-- Such as dates -->
+						<li>Augmentation: export, add information (programmatically or manually), reingest</li>
+						<li>Reuse/dissemination: digital humanities project, DPLA, etc.</li>
+					</ul>
+				</section>
+
+				<section>
+					<h1>Common Formats &amp; Tools</h1>
+					<p>CSV, XML, JSON-LD</p>
+					<ul>
+						<li>Excel: Manually editing metadata, cleaning up metadata</li>
+						<li>OpenRefine: Cleaning up metadata, deriving metadata, metadata entity resolution (linked data)</li>
+						<li>XSLT: Transforming metadata, deriving metadata</li>
+						<li>Python &amp; Ruby: Cleaning up metadata, deriving metadata, transforming metadata, extracting metadata for cleanup &amp; putting it back in records</li>
+					</ul>
+				</section>
+
+				<section>
+					<h1>Notre Dame Exports/Reingests JSON-LD</h1>
+					<ul>
+						<li>Really basic find &amp; replace: language as eng/ENG/English</li>
+						<li>Predicate changes</li>
+						<li>Transformation and reuse elsewhere</li>
+					</ul>
 				</section>
 
 				<section data-transition="fade">
