One more title change

--- a/presentations/samconn2017-lightning/index.html
+++ b/presentations/samconn2017-lightning/index.html
@@ -46,7 +46,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Metadata Management &amp; Reuse:</h1>
+					<h1>Management &amp; Reuse:</h1>
 					<h2>What Your Metadataists Do</h2>
 					<h3>Ruth Kitchin Tillman</h3>
 					<h4>Penn State University</h4>
