Added an additional slide and some bullet points
Added a little more detail to the slides.

--- a/presentations/samconn2017-lightning/index.html
+++ b/presentations/samconn2017-lightning/index.html
@@ -7,8 +7,8 @@
 
 		<title>Metadata Management and Reuse: What Your Metadataists Do</title>
 
-		<meta name="description" content="Performance Metrics with Valkyrie and Hyrax">
-		<meta name="author" content="Adam Wead">
+		<meta name="description" content="Metadata Management and Reuse: What Your Metadataists Do">
+		<meta name="author" content="Ruth Kitchin Tillman">
 
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -100,7 +100,24 @@
 				</section>
 
 				<section>
+						<h1>What We Want</h1>
+						<ul>
+							<li>Structured exports</li>
+							<li>Access to everything (All your metadata are belong to us.)</li>
+							<li>Reasonable ways to put it back in.</li>
+						</ul>
+				</section>
+
+				<section>
 					<h1>Notre Dame Exports/Reingests JSON-LD</h1>
+					<h2>How it works</h2>
+					<ul>
+						<li>Export single JSON-LD or groups (using Solr as a proto-API tool to fetch PIDs)</li>
+						<li>Make any changes</li>
+						<li>Throw them in the batch ingester</li>
+						<li>Profit?</li>
+					</ul>
+					<h2>Plans for it</h2>
 					<ul>
 						<li>Really basic find &amp; replace: language as eng/ENG/English</li>
 						<li>Predicate changes</li>
