Broke the ND slide into two
Just seems better that way.

--- a/presentations/samconn2017-lightning/index.html
+++ b/presentations/samconn2017-lightning/index.html
@@ -117,6 +117,9 @@
 						<li>Throw them in the batch ingester</li>
 						<li>Profit?</li>
 					</ul>
+				</section>
+				<section>
+					<h1>Notre Dame Exports/Reingests JSON-LD</h1>
 					<h2>Plans for it</h2>
 					<ul>
 						<li>Really basic find &amp; replace: language as eng/ENG/English</li>
