--- a/presentations/samconn2017-lightning/index.html
+++ b/presentations/samconn2017-lightning/index.html
@@ -77,6 +77,10 @@
 					<h2>To Get Metadata Out...</h2>
 					<p>...and put it back in again!</p>
 				</section>
+				<section>
+					<h1>When Do We Want It?</h1>
+					<h2>Yesterday, TBH</h2>
+				</section>
 
 				<section>
 					<h1>Sample Tasks</h1>
