Made more thematic

--- a/presentations/samconn2017-lightning/index.html
+++ b/presentations/samconn2017-lightning/index.html
@@ -74,8 +74,7 @@
 
 				<section>
 					<h1>What Do We Want?</h1>
-					<h2>To Get Metadata Out...</h2>
-					<p>...and put it back in again!</p>
+					<h2>Our metadata!!!</h2>
 				</section>
 				<section>
 					<h1>When Do We Want It?</h1>
